--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <div class="container portfolio-col-2">
         <div class="hero-col-2">
           <h1>
-            Hello, <span>I'm Amrit Sahoo,</span> <br />
+            Hello, <span>I'm Soumya Ranjan 🐼 ,</span> <br />
             Full stack web developer
           </h1>
           <p>
-            I'm a BTech student currently pursuing a CSE degree. I have a strong foundation in Full Stack Web Development and am eager to apply my skills to real-world projects.
+            I'm a BTech student currently pursuing a ECE degree. I have a strong foundation in Full Stack Web Development and am eager to apply my skills to real-world projects.
           </p>
           <div class="btns">
             <button>GET IN TOUCH</button>
@@ -103,9 +103,9 @@
            <div>
   <h1>Hi there!</h1> 👋
 
-  <p>I’m <strong>Amrit</strong> 🌟</p>
+  <p>I’m <strong>Soumya Ranjan</strong> 🌟</p>
 
-  <p>A <strong>BTech student</strong> pursuing a degree in <strong>Computer Science</strong> 🎓</p>
+  <p>A <strong>BTech student</strong> pursuing a degree in <strong>Electronics & Communication Engineering </strong> 🎓</p>
 
   <p><strong>Full Stack Web Developer</strong> 💻</p>
   <p><strong>Exploring innovative solutions</strong> 💡</p>
@@ -132,7 +132,7 @@
           <div class="col-4">
             <h2>🏠 Address</h2>
             <ul>
-              <li>Raj Nilgiri, Balasore, Odisha, India</li>
+              <li>Jaleshwar, Odisha, India</li>
             </ul>
           </div>
           <div class="col-4">
