--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     text-align: center;
     margin-top: 20px;
     font-weight: normal;
-">AmritVibes.com</h2>
+">Soumya-Online.com</h2>
           </div>
           <nav>
             <ul>
