--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container portfolio-col-2">
         <div class="hero-col-2">
           <h1>
-            Hello, <span>I'm Soumya Ranjan 🐼 ,</span> <br />
+            Hello, <span>I'm Soumya Ranjan  ,</span> 🐼<br />
             Full stack web developer
           </h1>
           <p>
@@ -132,7 +132,7 @@
           <div class="col-4">
             <h2>🏠 Address</h2>
             <ul>
-              <li>Jaleshwar, Odisha, India</li>
+              <li>Mill Colony, Jaleshwar, Odisha, India</li>
             </ul>
           </div>
           <div class="col-4">
